update(search): Add autcomplete input

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -21,6 +21,7 @@
 			role="search"
 			[id]="id"
 			[value]="value"
+			[autocomplete]="autocomplete"
 			[placeholder]="placeholder"
 			[disabled]="disabled"
 			[required]="required"
