--- a/.storybook/preview.scss
+++ b/.storybook/preview.scss
@@ -1,8 +1,13 @@
 @import '~carbon-components/scss/globals/scss/styles';
 
+html {
+	height: 100%;
+}
+
 .sb-show-main:not(.full-page) {
 	padding: 3em;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	height: 100%;
 }
