--- a/src/search/search.component.scss
+++ b/src/search/search.component.scss
@@ -6,6 +6,9 @@
         top: 100%;
         left: 0;
         right: 0;
+        b{
+            font-weight: bold;
+        }
     }
 
     .bx--search-close{
