--- a/.storybook/preview.scss
+++ b/.storybook/preview.scss
@@ -1,4 +1,5 @@
-@import '~carbon-components/scss/globals/scss/styles';
+// @import '~carbon-components/scss/globals/scss/styles';
+@import '~carbon-components/css/carbon-components';
 
 html {
 	height: 100%;
