Feature: implement lg search

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -3,6 +3,7 @@
 	[ngClass]="{
 		'bx--search--sm': size === 'sm',
 		'bx--search--xl': size === 'xl',
+		'bx--search--lg': size === 'lg',
 		'bx--search--light': theme === 'light',
 		'bx--skeleton': skeleton,
 		'bx--toolbar-search': toolbar,
