feat(search): add search event

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -24,6 +24,7 @@
 			[placeholder]="placeholder"
 			[disabled]="disabled"
 			[required]="required"
+			(keyup.enter)="onEnter()"
 			(input)="onSearch($event.target.value)"/>
 		<button *ngIf="!tableSearch && toolbar" class="bx--toolbar-search__btn" (click)="openSearch()">
 			<ibm-icon-search16 class="bx--search-magnifier"></ibm-icon-search16>
