fix(accessibility): fix interactive search element not being focusable by keyboard, and table row

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -29,7 +29,14 @@
 		<button *ngIf="!tableSearch && toolbar" class="bx--toolbar-search__btn" (click)="openSearch()">
 			<ibm-icon-search size="16" class="bx--search-magnifier"></ibm-icon-search>
 		</button>
-		<ibm-icon-search size="16" *ngIf="tableSearch || !toolbar" (click)="openSearch()" class="bx--search-magnifier"></ibm-icon-search>
+		<ibm-icon-search
+			*ngIf="tableSearch || !toolbar"
+			class="bx--search-magnifier"
+			size="16"
+			role="button"
+			tabindex="0"
+			(click)="openSearch()">
+		</ibm-icon-search>
 	</ng-template>
 
 	<button
