Update of bx--search-magnifier-icon in search component

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -34,12 +34,12 @@
 			class="bx--toolbar-search__btn"
 			(click)="openSearch()"
 			aria-label="Open search">
-			<svg ibmIcon="search" size="16" class="bx--search-magnifier"></svg>
+			<svg ibmIcon="search" size="16" class="bx--search-magnifier-icon"></svg>
 		</button>
 		<svg
 			ibmIcon="search"
 			*ngIf="tableSearch || !toolbar"
-			class="bx--search-magnifier"
+			class="bx--search-magnifier-icon"
 			size="16">
 		</svg>
 	</ng-template>
