fix(table-toolbar-search): fixing styling issue with latest carbon-components

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -6,8 +6,11 @@
 		'bx--search--xl': size === 'xl',
 		'bx--search--light': theme === 'light',
 		'bx--skeleton': skeleton,
-		'bx--toolbar-search': toolbar,
-		'bx--toolbar-search--active': toolbar && active
+		'bx--toolbar-search': toolbar && !tableSearch,
+		'bx--toolbar-search--active': toolbar && !tableSearch && active,
+		'bx--toolbar-search-container-persistent': tableSearch && !toolbar,
+		'bx--toolbar-search-container-expandable': tableSearch && toolbar,
+		'bx--toolbar-search-container-active': tableSearch && toolbar && active
 	}"
 	role="search"
 	[attr.aria-label]="ariaLabel"
