Use carbon styles instead of carbon-component
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/.storybook/preview.scss
+++ b/.storybook/preview.scss
@@ -1,4 +1,4 @@
-@import '~carbon-components/css/carbon-components';
+@use '@carbon/styles';
 
 html {
 	height: 100%;
@@ -11,7 +11,6 @@ html {
 	align-items: center;
 	height: 100%;
 }
-
 
 #root {
 	display: block;
