Standardize size property types
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -2,8 +2,8 @@
 	class="cds--search"
 	[ngClass]="{
 		'cds--search--sm': size === 'sm',
-		'cds--search--lg': size === 'md',
-		'cds--search--xl': size === 'xl',
+		'cds--search--md': size === 'md',
+		'cds--search--lg': size === 'lg',
 		'cds--search--light': theme === 'light',
 		'cds--skeleton': skeleton,
 		'cds--search--expandable': expandable && !tableSearch,
