Import flex grid to allow both css & flex grid
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/.storybook/preview.scss
+++ b/.storybook/preview.scss
@@ -1,6 +1,5 @@
-@use '@carbon/styles' with (
-	$use-flexbox-grid: true,
-);
+@use '@carbon/styles';
+@use '@carbon/styles/scss/grid/flexbox';
 
 html {
 	height: 100%;
