Change role to searchbox
Signed-off-by: Andrew Mak <makandre@ca.ibm.com>

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -14,7 +14,7 @@
 		'bx--toolbar-search-container-expandable': tableSearch && expandable,
 		'bx--toolbar-search-container-active': tableSearch && expandable && active
 	}"
-	role="search"
+	role="searchbox"
 	[attr.aria-label]="ariaLabel"
 	tabindex="0"
 	(click)="openSearch()">
