chore: linting changes for fluid state for search
Co-authored-by: Akshat Patel <38994122+Akshat55@users.noreply.github.com>

--- a/src/search/search.component.html
+++ b/src/search/search.component.html
@@ -22,8 +22,9 @@
 	<label
 		class="cds--label"
 		[for]="id"
-		[ngClass]="{ 'cds--skeleton': skeleton && fluid }"
-	>{{ !skeleton ? label : ''}}</label>
+		[ngClass]="{ 'cds--skeleton': skeleton && fluid }">
+		{{ !skeleton ? label : ''}}
+	</label>
 
 	<div *ngIf="skeleton; else enableInput" class="cds--text-input cds--skeleton"></div>
 	<ng-template #enableInput>
