fix: reference node_module in root

--- a/integration/ng20/src/styles.scss
+++ b/integration/ng20/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@use '@carbon/styles/scss/config' with (
+@use './../node_modules/@carbon/styles/scss/config' with (
   $use-flexbox-grid: true,
 	$font-path: '@ibm/plex'
 );
 
-@use '@carbon/styles';
+@use './../node_modules/@carbon/styles';
